--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         # version: [v0.6.85]
-        version: [d7eceb6b08badd771b0b4d236ec43720284ef6a6]
+        version: [v0.6.85]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
