--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Archipelo
         uses: ./
         with:
-          # version: ${{ matrix.version }}
+          version: main
           qa: true
 
       - name: Show folder
