--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,27 +12,16 @@ defaults:
 jobs:
   test:
     name: Test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        # version: [v0.6.85]
-        version: [v0.6.85]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Archipelo
         uses: ./
-        with:
-          version: main
-          qa: true
 
       - name: Show folder
         run: ls -lsa
-
-      - name: Run version
-        run: archipelo version
 
       - name: Capture archipelo version installed
         run: |
@@ -44,7 +33,7 @@ jobs:
       - name: Verify
         shell: python
         env:
-          AR_VERSION_EXPECTED: ${{ matrix.version }}
+          AR_VERSION_EXPECTED: v0.6.86
         run: |
           import sys, os
           sys.exit(
